# bevy_icon_creator

./: .gitignore  Cargo.toml  Readme.md
src/: clone_entity_tree.rs  created_icons.rs  hash_to_uuid_ext.rs  image_ext.rs  lib.rs  markers.rs  needs_icon_marker.rs  plugin.rs  queue.rs  register_types.rs  set_image_on_load.rs  setup.rs  state.rs  update.rs  utils.rs
src/markers/: mod.rs
