[package]
name = "bevy_icon_creator"
version = "0.1.2"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "A plugin to automatically create Icons from entities/models in bevy"
repository = "https://git.franklinblanco.dev/franklinblanco/bevy_icon_creator"
keywords = ["gamedev", "bevy", "icon", "model", "texture"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]

[dependencies]
bevy = { version = "0.13.1" }